--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./style/style.css">
-  <title>Frontend Mentor | Loopstudios landing page</title>
+  <title>Loopstudios | Landing page</title>
 
 </head>
 <body>
